--- a/websitelink/Hotel-Hira-master/index.html
+++ b/websitelink/Hotel-Hira-master/index.html
@@ -661,7 +661,7 @@
             <div class="col-lg-3 col-md-6 info">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>Charumoodu -Sasthamkotta Rd, Bharanikavu<br>Kerala 690521</p>
+              <p>Kalyan Mantapa<br>Basavakalyan 585327</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
@@ -679,7 +679,7 @@
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+91 9447248644<br>+91 9497780849</p>
+              <p>+91 99899989995<br>+91 99776888985</p>
             </div>
           </div>
         </div>
@@ -709,7 +709,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/ -->
-        Designed by <a href="https://rayyan257.github.io/Rayyan-Made/">Rayyan</a>
+        Designed by <a href="https://rayyan257.github.io/Rayyan-Made/">Shrikant Dhongade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
