--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, web development, coderportfolio, portfolio">
+    <meta name="author" content="Shrikant Dhongade">
+    <meta name="description" content="I am extremely passionate about web design Development and i love to talk about it.i'm with broad technical skill set, very strong attention to detail, and 3 year of experience in front -end and back-end development">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>Shrikant Dhongade</title>
 
