--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 </header>
 <!-- Header -->
 <!-- Section-1 -->
-    <section class="sectionfirst res-text-animated res-mobile-only" id="home">
-		<div class="container aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+    <section class="sectionfirst res-text-animated" id="home">
+		<div class="container aos-init aos-animate res-mobile-only" data-aos="zoom-in" data-aos-delay="100">
 			<h1 class="home-title">Shrikant Dhongade</h1>
 			<div class="main-type">
 				<div class="iam">I'm</div>
