--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
   .res-mobile-only {
     display:block;
   }
+.sectionfirst:before{
+    content: "";
+    background: rgb(55 52 52 / 45%);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+.home-title {
+    color: #9aa7b3;
+}
+.iam {
+    color: #9aa7b3;
+    font-size: 26px;
+    font-family: "Poppins", sans-serif;
+    margin-right: 5px;
+}	
 }
 </style>
 </head>
