--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   }
 .sectionfirst:before{
     content: "";
-    background: rgb(55 52 52 / 45%);
+/*     background: rgb(55 52 52 / 45%); */
     position: absolute;
     bottom: 0;
     top: 0;
