--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 						
 					</div>
 					<div class="row">
-						<!--<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
+						<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
 							<div class="gridwork">
 								<figure class="effect-ruby hover-upp">
 									<img src="img/work/screenshots/initiawebsite.png" alt="img13"/>
@@ -555,7 +555,7 @@
 									</figcaption>			
 								</figure>
 							</div>
-						</div>-->
+						</div>
 						<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
 							<div class="gridwork">
 								<figure class="effect-ruby hover-upp">
@@ -568,7 +568,7 @@
 								</figure>
 							</div>
 						</div>
-						<!--<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
+						<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
 							<div class="gridwork">
 								<figure class="effect-ruby hover-upp">
 									<img src="img/work/screenshots/Mindacontactform.png" alt="img13"/>
@@ -579,7 +579,7 @@
 									</figcaption>			
 								</figure>
 							</div>
-						</div>-->
+						</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6 respvideo" data-aos="zoom-in">
@@ -594,7 +594,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<!--<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
+							<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
 								<div class="gridwork">
 									<figure class="effect-ruby hover-upp">
 										<img src="img/work/screenshots/Creat-website.png" alt="img13"/>
@@ -605,7 +605,7 @@
 										</figcaption>			
 									</figure>
 								</div>
-							</div>-->
+							</div>
 							<div class="col-lg-4" data-aos="fade-right"data-aos-offset="300"data-aos-easing="ease-in-sine">
 								<div class="gridwork">
 									<figure class="effect-ruby hover-upp">
@@ -765,7 +765,7 @@
 
 
 
-									<!-- <div class="row">
+									<div class="row">
 										<div class="col-lg-6 respvideo" data-aos="zoom-in">
 											<video class="video-fluid" autoplay="" loop="" muted="" height="240" controls>
 												<source src="img/work/cinum.mp4" type="video/mp4">
@@ -776,7 +776,7 @@
 												<source src="img/work/monstroid.mp4" type="video/mp4">
 										   </video>
 										</div>
-									</div> -->
+									</div>
 
 						
 		</div>
