--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
 }	
 }
 </style>
+
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Shrikant Dhongade",
+    "jobTitle": "Senior Front-end Developer",
+    "url": "https://shrikant-dhongade.github.io",
+    "image": "https://shrikant-dhongade.github.io/images/shrikant-dhongade.jpg",
+    "sameAs": [
+      "www.linkedin.com/in/shrikant-dhongade-360a29183",
+      "https://github.com/shrikant-dhongade"
+    ]
+  }
+</script>
 </head>
 <body>
 	
